--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <li class="menu-active"><a href="#intro">Início</a></li>
                     <li><a href="#about">Sobre o evento</a></li>
                     <li><a href="#schedule">Edições</a></li>
-                    <li><a href="#venue">Local</a></li>
-                    <li><a href="#gallery">Galeria</a></li>
+                    <li><a href="virtual.html">Edições Online</a></li>
+                    <li><a href="local.html">Locais</a></li>
                     <li><a href="#supporters">Parceiros</a></li>
                     <li><a href="media.html">Notícias</a></li>
                     <li><a href="#faq">Perguntas frequentes</a></li>
@@ -90,7 +90,10 @@
                         height="250" title=""></a>
             </div>
             <h1 class="mb-4 pb-0">Seu pub mensal sobre s<br><span>ciência e tecnologia</span></h1>
-            <h2 style="color: #ffffff;"><a href="2020-covid19.html">Informe sobre a pandemia de COVID-19</a><br></h2>
+            <h6><a href="2020-covid19.html" style="color: #ffffff;">Atualizações sobre a pandemia de COVID-19</a><br>
+            </h6>
+            <h2 style="color: #ffffff;"><a href="virtual.html">Acompanhe a programação virtual do
+                    SciencePub</a><br></h2>
             <a href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
                 data-autoplay="true"></a>
             <a href="#about" class="about-btn scrollto">Descubra mais</a>
@@ -168,135 +171,6 @@
                     </div>
                 </div>
         </section>
-
-        <!--==========================
-      Venue Section
-    ============================-->
-        <section id="venue" class="wow fadeInUp">
-
-            <div class="container-fluid">
-                <div class="section-header">
-                    <h2>Local</h2>
-                    <p>Saiba onde acontece o happy hour científico em sua cidade!</p>
-                </div>
-                <div class="row no-gutters">
-                    <div class="col-sm-12 col-md-6 col-lg-6 venue-map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.2457920905676!2d-47.49192368523415!3d-5.5305101959898835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92c55fbaf2883997%3A0xfd004d7504257128!2sRitz%20Restaurante!5e0!3m2!1spt-BR!2sbr!4v1584280199003!5m2!1spt-BR!2sbr"
-                            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""
-                            aria-hidden="false" tabindex="0"></iframe>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6 venue-info venue-itz">
-                        <div class="row justify-content-center">
-                            <div class="col-11 col-lg-8">
-                                <h1 style="color: #ffffff;">Imperatriz, Maranhão</h1>
-                                <h3>Ritz Restaurante</h3>
-                                <p>Gastronomia internacional com um tempero brasileiro</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="row no-gutters">
-                    <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.01234152037!2d-44.31458748524408!3d-2.5028151981762403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f68c1c82a4c553%3A0xa120964fddcb6aae!2sBeer+Tap+-+Cultura+Cervejeira!5e0!3m2!1spt-BR!2sbr!4v1564606157365!5m2!1spt-BR!2sbr"
-                            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
-                    <div class="col-sm-12 col-md-3 col-lg-3 venue-info venue-slz">
-                        <div class="row justify-content-center">
-                            <div class="col-11 col-lg-8">
-                                <h1 style="color: #ffffff;">São Luís, Maranhão</h1>
-                                <h3>Beer Tap</h3>
-                                <p>Cultura cervejeira e 14 torneiras de chopp artesanal</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3491.6895188105773!2d-49.48344358491045!3d-28.9372664822985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95222f23260ce445%3A0xfb49810027f1829a!2sLord%20Beer!5e0!3m2!1spt-BR!2sbr!4v1580927906384!5m2!1spt-BR!2sbr"
-                            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen></iframe>
-                    </div>
-                    <div class="col-sm-12 col-md-3 col-lg-3 venue-info venue-ara">
-                        <div class="row justify-content-center">
-                            <div class="col-11 col-lg-8">
-                                <h1 style="color: #ffffff;">Araranguá, Santa Catarina</h1>
-                                <h3>Lord Beer</h3>
-                                <p>Bar e petiscaria. Os melhores drinks, chopps e petiscos da região.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="row no-gutters">
-                    <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3985.9695192809913!2d-44.247971984631334!3d-2.5168580389177326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f69153be19586d%3A0xe77fd823ad080431!2sEspa%C3%A7o%20Black%20Swan!5e0!3m2!1spt-BR!2sbr!4v1570648870002!5m2!1spt-BR!2sbr"
-                            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                    </div>
-                    <div class="col-sm-12 col-md-3 col-lg-3 venue-info venue-bsw">
-                        <div class="row justify-content-center">
-                            <div class="col-11 col-lg-8">
-                                <h1 style="color: #ffffff;">São Luís, Maranhão</h1>
-                                <h3>Espaço Black Swan</h3>
-                                <p>Maior centro de inovação aberta de iniciativa privada do norte/nordeste</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.0320312594104!2d-48.52137428553332!3d-27.59253652854299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527385624f6b255%3A0xbcb86064a29cc225!2sRestaurante+Bendita+Gula!5e0!3m2!1spt-BR!2sbr!4v1564606530985!5m2!1spt-BR!2sbr"
-                            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
-                    <div class="col-sm-12 col-md-3 col-lg-3 venue-info venue-fln">
-                        <div class="row justify-content-center">
-                            <div class="col-11 col-lg-8">
-                                <h1 style="color: #ffffff;">Florianópolis, Santa Catarina</h1>
-                                <h3>Bendita Gula</h3>
-                                <p>Servindo você com amor</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!--==========================
-      Gallery Section
-    ============================-->
-        <section id="gallery" class="wow fadeInUp">
-            <div class="container">
-                <div class="section-header">
-                    <h2>Galeria</h2>
-                    <p>Confira algumas fotos de happy hours científicos anteriores!</p>
-                </div>
-            </div>
-
-            <div class="owl-carousel gallery-carousel">
-                <a href="img/gallery/pic01.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic01.jpg" alt=""></a>
-                <a href="img/gallery/pic02.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic02.jpg" alt=""></a>
-                <a href="img/gallery/pic03.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic03.jpg" alt=""></a>
-                <a href="img/gallery/pic04.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic04.jpg" alt=""></a>
-                <a href="img/gallery/pic05.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic05.jpg" alt=""></a>
-                <a href="img/gallery/pic06.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic06.jpg" alt=""></a>
-                <a href="img/gallery/pic07.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic07.jpg" alt=""></a>
-                <a href="img/gallery/pic08.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic08.jpg" alt=""></a>
-                <a href="img/gallery/pic09.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic09.jpg" alt=""></a>
-                <a href="img/gallery/pic10.jpg" class="venobox" data-gall="gallery-carousel"><img
-                        src="img/gallery/pic10.jpg" alt=""></a>
-            </div>
-
-        </section>
-
         <!--==========================
       Sponsors Section
     ============================-->
