Atualiza link quebrado

--- a/media.html
+++ b/media.html
@@ -92,7 +92,7 @@
                                     Astronômico
                                     Desterro</a></h2>
                             <h2><a
-                                    href="https://sites.google.com/view/cadesterro/jornal-astron%C3%B4mico-desterro-sc?authuser=0">SciencePub:
+                                    href="https://drive.google.com/file/d/1wxhxOBqSBaTEfFxiV1HJx8yGD0cJXB9Z/view">SciencePub:
                                     democratizando a ciência no bar</a></h2>
                         </div>
                         <div>
